# FTORRENT

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  COMPILE-GUIDE.md  DEPLOYMENT.md  DIALOGS.md  MULTITHREADING-ARCHITECTURE.md  MULTITHREADING-ES.md  MULTITHREADING-SUMMARY.md  PROGRESS.md  README.md  RESOURCES.md  TECHNICAL-REFERENCE.md  UI-DESIGN.md  USER-GUIDE.md  build.ps1  check-requirements.ps1  compile.bat  create-installer.ps1  install-dependencies.md  install-vcpkg-deps.ps1  io.github.thedevil4k.FLTorrent.json  io.github.thedevil4k.FTorrent.desktop  io.github.thedevil4k.FTorrent.json  parse_fltk.py  parse_runs.py  quick-compile.bat  runs.json  setup-dev-env.ps1  trackersadd.txt
.github/workflows/: build.yml
build_test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  cmake_install.cmake
docs/: index.html  robots.txt  sitemap.xml
docs/css/: style.css
docs/js/: main.js
scripts/: BUILDING.md
scripts-for-building/: BUILDING.md  build-linux.sh  build-win.ps1  create-linux-deb.sh  create-linux-rpm.sh  create-win-installer.ps1  setup-linux.sh
scripts/linux/compilation/: build-linux.sh
scripts/linux/installers/: create-linux-deb.sh  create-linux-rpm.sh
scripts/linux/setup/: setup-linux.sh
scripts/windows/: setup-windows.bat  setup-windows.ps1
scripts/windows/compilation/: compile.ps1
scripts/windows/installers/: create-win-installer.ps1
scripts/windows/setup/: check-requirements.ps1  install-vcpkg-deps.ps1
src/: AddTorrentDialog.cpp  AddTorrentDialog.h  CreateTorrentDialog.cpp  CreateTorrentDialog.h  Icons.h  LogoIcon.h  MainWindow.cpp  MainWindow.h  PathUtils.cpp  PathUtils.h  PreferencesDialog.cpp  PreferencesDialog.h  RemoveConfirmDialog.cpp  RemoveConfirmDialog.h  Resources.cpp  Resources.h  SettingsManager.cpp  SettingsManager.h  SystemUtils.cpp  SystemUtils.h  TorrentDetailsDialog.cpp  TorrentDetailsDialog.h  TorrentItem.cpp  TorrentItem.h  TorrentListWidget.cpp  TorrentListWidget.h  TorrentManager.cpp  TorrentManager.h  TorrentSession.cpp  TorrentSession.h  main.cpp  resources.rc
